--- a/src/cart.html
+++ b/src/cart.html
@@ -4,6 +4,10 @@ title: Главная страница
 ---
 
 <main class="main">
+    <div class="cart-bg-img">
+        <div class="cart-bg-img__blur"></div>
+        <img class="cart-bg-img__item" src="assets/images/cart/1.png" alt="">
+    </div>
 
     <section class="catalog-list catalog-list-cart">
         <div class="container">
@@ -232,28 +236,50 @@ title: Главная страница
         <div class="container">
             <div class="cart-advantages__block">
                 <div class="cart-advantages__item">
-                    <img src="assets/images/cart/advantage-1.svg" class="cart-advantages__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+                        <g clip-path="url(#clip0_2449_34639)">
+                            <path d="M48.0847 19.5505L28.5478 0.0136719L10.6143 1.95717L11.0802 6.26451L26.951 4.54634L45.021 22.6142C45.6623 23.2555 45.6623 24.2977 44.995 24.9628L42.9107 27.1165L24.0455 8.25134L4.24867 10.9575L2.0625 30.724L21.5907 50.25C22.7195 51.3788 24.2188 52.0007 25.8157 52.0007C27.4125 52.0007 28.914 51.3788 30.0667 50.2262L43.5953 36.2533C45.0362 34.8125 45.58 32.8127 45.2398 30.9428L48.0868 28.0027C50.416 25.6713 50.4138 21.8797 48.0847 19.5505ZM12.9977 21.6673C11.8017 21.6673 10.831 20.6967 10.831 19.5007C10.831 18.3047 11.8017 17.334 12.9977 17.334C14.1937 17.334 15.1643 18.3047 15.1643 19.5007C15.1643 20.6967 14.1937 21.6673 12.9977 21.6673Z" fill="#847F7D" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_2449_34639">
+                                <rect width="52" height="52" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
                     <div class="cart-advantages__content">
                         <div class="cart-advantages__title">Низкие цены</div>
                         <div class="cart-advantages__text">Дешовые и надежные продукты</div>
                     </div>
                 </div>
                 <div class="cart-advantages__item">
-                    <img src="assets/images/cart/advantage-2.svg" class="cart-advantages__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+                        <path d="M45.4983 46.5831V51.9998H6.49831V46.5831C6.49831 41.2076 10.8728 36.8331 16.2483 36.8331H35.7483C41.1238 36.8331 45.4983 41.2076 45.4983 46.5831ZM14.8876 8.72497C18.2005 5.62014 22.5381 4.08614 27.086 4.3678C35.588 4.91814 42.2505 12.3173 42.2505 21.2115C42.2505 25.0465 39.1326 28.1643 35.2976 28.1643H30.0846C29.556 26.3681 27.9136 25.0465 25.9463 25.0465C23.5521 25.0465 21.613 26.9856 21.613 29.3798C21.613 31.774 23.5521 33.7131 25.9463 33.7131C27.112 33.7131 28.1671 33.2473 28.945 32.4976H35.2976C41.5203 32.4976 46.5838 27.4341 46.5838 21.2115C46.5816 10.0401 38.1403 0.740804 27.3633 0.0453043C21.5913 -0.329529 16.1161 1.6313 11.9236 5.56597C8.05181 9.19514 5.72481 14.224 5.44531 19.502H9.78515C10.0516 15.3788 11.8391 11.5828 14.8876 8.72497ZM32.715 23.8331H35.679C36.7645 23.8331 37.7135 23.0358 37.8391 21.9568C37.9865 20.685 37.9323 19.3525 37.642 17.9896C36.68 13.4851 33.0248 9.85164 28.5138 8.9243C20.8503 7.34914 14.086 13.1926 14.086 20.5831C14.086 23.766 15.3405 26.6606 17.3793 28.7991C17.6176 24.2253 21.3681 20.581 26.0005 20.581C28.7261 20.581 31.1268 21.8636 32.715 23.831V23.8331Z" fill="#847F7D" />
+                    </svg>
                     <div class="cart-advantages__content">
                         <div class="cart-advantages__title">Быстрая поддержка</div>
                         <div class="cart-advantages__text">Моментальные компетентная поддержка 24/7</div>
                     </div>
                 </div>
                 <div class="cart-advantages__item">
-                    <img src="assets/images/cart/advantage-3.svg" class="cart-advantages__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+                        <path d="M43.2077 43.3327C43.2813 43.6837 43.3333 44.0434 43.3333 44.416C43.3333 47.4082 40.9088 49.8327 37.9167 49.8327C34.9245 49.8327 32.5 47.4082 32.5 44.416C32.5 44.0434 32.552 43.6837 32.6257 43.3327H43.2098H43.2077ZM8.79017 43.3327C8.7165 43.6837 8.6645 44.0434 8.6645 44.416C8.6645 47.4082 11.089 49.8327 14.0812 49.8327C17.0733 49.8327 19.4978 47.4082 19.4978 44.416C19.4978 44.0434 19.4458 43.6837 19.3722 43.3327H8.79017ZM32.4978 38.9994V12.9993C32.4978 7.01718 27.6467 2.16602 21.6645 2.16602H10.8312C4.85117 2.16602 0 7.01718 0 12.9993V19.4993H17.4113L13.5807 15.6687C12.7335 14.8215 12.7335 13.45 13.5807 12.605C14.4278 11.7578 15.7972 11.7578 16.6443 12.605L22.6417 18.6024C24.3317 20.2924 24.3317 23.0397 22.6417 24.7297L16.6443 30.727C16.2218 31.1495 15.6672 31.3619 15.1125 31.3619C14.5578 31.3619 14.0032 31.1495 13.5807 30.727C12.7335 29.8799 12.7335 28.5105 13.5807 27.6633L17.4113 23.8327H0V30.3327C0 35.1189 3.8805 38.9994 8.66667 38.9994H32.5H32.4978ZM36.8312 38.9994H43.3312C48.1173 38.9994 51.9978 35.1189 51.9978 30.3327V28.166H36.8312V38.9994ZM41.1645 10.8327H36.8312V23.8327H51.9978V21.666C51.9978 15.6838 47.1467 10.8327 41.1645 10.8327Z" fill="#847F7D" />
+                    </svg>
                     <div class="cart-advantages__content">
                         <div class="cart-advantages__title">Мгновенная доставка</div>
                         <div class="cart-advantages__text">Быстрая активация за 15 секунд</div>
                     </div>
                 </div>
                 <div class="cart-advantages__item">
-                    <img src="assets/images/cart/advantage-4.svg" class="cart-advantages__icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+                        <g clip-path="url(#clip0_2449_6693)">
+                            <path d="M33.124 9.10689C32.2833 8.25539 32.292 6.88389 33.1435 6.04322L37.9188 1.32639C39.689 -0.43728 42.5728 -0.439447 44.3538 1.33505L49.179 6.03239C50.037 6.86655 50.0543 8.23805 49.2223 9.09605C48.7977 9.53155 48.2343 9.75039 47.6688 9.75039C47.1228 9.75039 46.579 9.54672 46.1587 9.13505L43.3355 6.38772V19.5004C43.3355 20.6964 42.367 21.6671 41.1688 21.6671C39.9707 21.6671 39.0022 20.6964 39.0022 19.5004V6.34872L36.192 9.12422C35.3383 9.96489 33.9712 9.95839 33.1262 9.10472L33.124 9.10689ZM52 23.8337V45.5004C52 49.0841 49.0837 52.0004 45.5 52.0004H10.8333C4.85983 52.0004 0 47.1406 0 41.1671V19.5004C0 17.5786 0.502667 15.7716 1.3845 14.2051C1.42783 14.1184 1.4755 14.0339 1.52967 13.9537C3.42333 10.7904 6.88567 8.66705 10.8333 8.66705H26C27.1982 8.66705 28.1667 9.63772 28.1667 10.8337C28.1667 12.0297 27.1982 13.0004 26 13.0004H10.8333C8.9115 13.0004 7.18033 13.8389 5.99083 15.1692C7.21067 16.5277 8.97217 17.3337 10.8333 17.3337H34.6667V19.5004C34.6667 23.0841 37.583 26.0004 41.1667 26.0004C44.7503 26.0004 47.6667 23.0841 47.6667 19.5004V17.7324C50.1822 18.6294 52 21.0127 52 23.8337ZM43.3333 34.6671C43.3333 32.8731 41.8773 31.4171 40.0833 31.4171C38.2893 31.4171 36.8333 32.8731 36.8333 34.6671C36.8333 36.4611 38.2893 37.9171 40.0833 37.9171C41.8773 37.9171 43.3333 36.4611 43.3333 34.6671Z" fill="#847F7D" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_2449_6693">
+                                <rect width="52" height="52" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
                     <div class="cart-advantages__content">
                         <div class="cart-advantages__title">Гибкие платежи</div>
                         <div class="cart-advantages__text">Большинство методов оплаты на разный вкус</div>
@@ -426,10 +452,10 @@ title: Главная страница
     <section class="game-slider">
         <div class="container">
 
-            <div class="game-slider__block game-swiper-1">
+            <div class="game-slider__block game-swiper-2">
 
                 <div class="game-slider__actions">
-                    <div class="game-slider__title">Вас может заинтересовать</div>
+                    <a href="#" class="game-slider__more btn-arrow">Вас может заинтересовать</a>
                     <div class="game-slider__arrows">
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
@@ -439,109 +465,29 @@ title: Главная страница
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            <div class="game-card">
-                                <img class="game-card__img" src="assets/images/home/card-image.png" alt="">
-                                <div class="game-card__content">
-                                    <div class="game-card__title">Название игры этой карточки карточки карточки</div>
-                                    <div class="game-card__subtitle">Дополнительная информация</div>
-                                    <div class="game-card__label">
-                                        <img src="assets/images/home/xbox.svg" alt="">
-                                    </div>
-                                    <div class="game-card__discount">-20%</div>
-                                </div>
-                                <a href="#" class="game-card__btn">
-                                    <span class="game-card__btn_block">
-                                        <span class="game-card__price">1258</span>
-                                        <span class="game-card__price_cur">₽</span>
-                                        <span class="game-card__price_old">1258</span>
-                                    </span>
-                                </a>
-                            </div>
+                            {{> cart }}
+                        </div>
+                        <div class="swiper-slide">
+                            {{> cart }}
                         </div>
                     </div>
                 </div>
 
+
             </div>
+
         </div>
     </section>
 
