--- a/src/steam.html
+++ b/src/steam.html
@@ -414,7 +414,7 @@ title: Пополнение стим
 
     <section class="steam-slider">
         <div class="container">
-            <div class="game-slider__block game-swiper-1">
+            <div class="game-slider__block">
 
                 <div class="game-slider__actions">
                     <div class="steam-slider__title">
