--- a/src/admin-statics.html
+++ b/src/admin-statics.html
@@ -396,9 +396,36 @@ title: Статистика
                         </div>
                     </div>
                 </div>
+                <div class="catalog-cards__pagination">
+                    <nav class="pagination">
+                        <ul class="pagination-list">
+                            <li class="pagination-item">
+                                <a class="pagination-link" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="37" viewBox="0 0 46 37" fill="none">
+                                        <rect width="46" height="37" rx="5" fill="#282725"></rect>
+                                        <path d="M32 17C32.5523 17 33 17.4477 33 18C33 18.5523 32.5523 19 32 19L32 17ZM13.2929 18.7071C12.9024 18.3166 12.9024 17.6834 13.2929 17.2929L19.6569 10.9289C20.0474 10.5384 20.6805 10.5384 21.0711 10.9289C21.4616 11.3195 21.4616 11.9526 21.0711 12.3431L15.4142 18L21.0711 23.6569C21.4616 24.0474 21.4616 24.6805 21.0711 25.0711C20.6805 25.4616 20.0474 25.4616 19.6569 25.0711L13.2929 18.7071ZM32 19L14 19L14 17L32 17L32 19Z" fill="#FFFEFC"></path>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="pagination-item"><a class="pagination-link _active" href="#">1</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">2</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">3</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">...</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">20</a></li>
+                            <li class="pagination-item">
+                                <a class="pagination-link" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="37" viewBox="0 0 46 37" fill="none">
+                                        <rect width="46" height="37" rx="5" transform="matrix(-1 0 0 1 46 0)" fill="#282725"></rect>
+                                        <path d="M14 17C13.4477 17 13 17.4477 13 18C13 18.5523 13.4477 19 14 19L14 17ZM32.7071 18.7071C33.0976 18.3166 33.0976 17.6834 32.7071 17.2929L26.3431 10.9289C25.9526 10.5384 25.3195 10.5384 24.9289 10.9289C24.5384 11.3195 24.5384 11.9526 24.9289 12.3431L30.5858 18L24.9289 23.6569C24.5384 24.0474 24.5384 24.6805 24.9289 25.0711C25.3195 25.4616 25.9526 25.4616 26.3431 25.0711L32.7071 18.7071ZM14 19L32 19L32 17L14 17L14 19Z" fill="#FFFEFC"></path>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
                 <div class="admin-reviews">
                     <div class="admin-content__btn_title">
-                        <span>Коментарии</span>
+                        <span>Отзывы</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="8" viewBox="0 0 20 8" fill="none">
                             <path d="M1 4.5C0.723858 4.5 0.5 4.27614 0.5 4C0.5 3.72386 0.723858 3.5 1 3.5L1 4.5ZM19.3536 3.64645C19.5488 3.84171 19.5488 4.15829 19.3536 4.35355L16.1716 7.53553C15.9763 7.73079 15.6597 7.73079 15.4645 7.53553C15.2692 7.34027 15.2692 7.02369 15.4645 6.82843L18.2929 4L15.4645 1.17157C15.2692 0.976309 15.2692 0.659727 15.4645 0.464465C15.6597 0.269203 15.9763 0.269203 16.1716 0.464465L19.3536 3.64645ZM1 3.5L19 3.5L19 4.5L1 4.5L1 3.5Z" fill="#FFFEFC" />
                         </svg>
@@ -469,6 +496,33 @@ title: Статистика
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="catalog-cards__pagination">
+                    <nav class="pagination">
+                        <ul class="pagination-list">
+                            <li class="pagination-item">
+                                <a class="pagination-link" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="37" viewBox="0 0 46 37" fill="none">
+                                        <rect width="46" height="37" rx="5" fill="#282725"></rect>
+                                        <path d="M32 17C32.5523 17 33 17.4477 33 18C33 18.5523 32.5523 19 32 19L32 17ZM13.2929 18.7071C12.9024 18.3166 12.9024 17.6834 13.2929 17.2929L19.6569 10.9289C20.0474 10.5384 20.6805 10.5384 21.0711 10.9289C21.4616 11.3195 21.4616 11.9526 21.0711 12.3431L15.4142 18L21.0711 23.6569C21.4616 24.0474 21.4616 24.6805 21.0711 25.0711C20.6805 25.4616 20.0474 25.4616 19.6569 25.0711L13.2929 18.7071ZM32 19L14 19L14 17L32 17L32 19Z" fill="#FFFEFC"></path>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="pagination-item"><a class="pagination-link _active" href="#">1</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">2</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">3</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">...</a></li>
+                            <li class="pagination-item"><a class="pagination-link" href="#">20</a></li>
+                            <li class="pagination-item">
+                                <a class="pagination-link" href="#">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="46" height="37" viewBox="0 0 46 37" fill="none">
+                                        <rect width="46" height="37" rx="5" transform="matrix(-1 0 0 1 46 0)" fill="#282725"></rect>
+                                        <path d="M14 17C13.4477 17 13 17.4477 13 18C13 18.5523 13.4477 19 14 19L14 17ZM32.7071 18.7071C33.0976 18.3166 33.0976 17.6834 32.7071 17.2929L26.3431 10.9289C25.9526 10.5384 25.3195 10.5384 24.9289 10.9289C24.5384 11.3195 24.5384 11.9526 24.9289 12.3431L30.5858 18L24.9289 23.6569C24.5384 24.0474 24.5384 24.6805 24.9289 25.0711C25.3195 25.4616 25.9526 25.4616 26.3431 25.0711L32.7071 18.7071ZM14 19L32 19L32 17L14 17L14 19Z" fill="#FFFEFC"></path>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
             </div>
 
