--- a/src/steam.html
+++ b/src/steam.html
@@ -458,22 +458,22 @@ title: Пополнение стим
                 <div class="swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            {{> cart-steam }}
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            {{> cart-steam }}
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            {{> cart-steam }}
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            {{> cart-steam }}
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            {{> cart-steam }}
+                            {{> cart }}
                         </div>
                         <div class="swiper-slide">
-                            {{> cart-steam }}
+                            {{> cart }}
                         </div>
                     </div>
                 </div>
